<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MasterFila</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtEmail">Email :.</string>
    <string name="txtDigiteEmail">Digite seu Email :.</string>
    <string name="txtSenha">Senha :.</string>
    <string name="txtNomeCompleto">Nome Completo :.</string>
    <string name="iconBack">icon_back</string>
    <string name="txtUltimaSenha">Ultima Senha:</string>
    <string name="txtSuaSenha">Sua Senha:</string>
    <string name="iconNext">icon_next</string>
    <string name="txtVoltar">Voltar</string>
    <string name="txtCpf">CPF :.</string>
    <string name="txtCrieSenha">Crie uma senha :.</string>
    <string name="txtRepitaSenha">Repita a senha :.</string>
    <string name="txt_conectar">Conectar</string>
    <string name="txtSolicitarSenha">Solicitar Senha</string>
    <string name="txtConcluir">Concluir</string>
    <string name="txtRecuperarSenha">Recuperar Senha</string>
    <string name="txt_esqueci_senha">Esqueci minha senha</string>
    <string name="txt_crie_conta">Novo aqui? Crie sua conta</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="txt_voltar_login">Voltar para Login</string>
    <string name="title_activity_recuperar_senha">RecuperarSenhaActivity</string>
    <string name="title_activity_categorias">CategoriasActivity</string>
    <string name="desc_icone_lista">IconeDaLista</string>
    <string name="title_activity_estabelecimentos">EstabelecimentosActivity</string>
    <string name="title_activity_chamar_senha">ChamarSenhaActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sliding_panel_layout">SlidingPanelLayout</string>
    <string name="alterarCategoria">Alterar Categoria</string>
    <string name="alterarCidade">Alterar Cidade</string>
    <string name="lbl_nome_estab">Nome do Estabelecimento: </string>
    <string name="lbl_sua_senha">Sua Senha: </string>
    <string name="lbl_ultimas_chamadas">Últimas Chamadas: </string>
    <string name="lbl_estimativa">Estimativa de Atendimento: </string>
    <string name="txt_selecione_categoria">Categoria</string>
    <string name="txt_selecione_cidade">Cidade</string>
    
    <string-array name="categorias">
        <item>Consultórios Médicos</item>
        <item>Repartições Públicas</item>
        <item>Agências Bancárias</item>
        <item>Cartórios</item>
        <item>Prefeitura e setores vinculados</item>
    </string-array>
    
</resources>