<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E7E8"
    android:padding="0dp"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/icone_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_inicio" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/icone_categoria"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/edit_text_borda"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:textColor="#201E1E"
        android:inputType="textEmailAddress"
        android:textColorHint="#BDBFC1">
        
         <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignRight="@+id/txtEmail"
        android:layout_alignTop="@+id/txtEmail"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_borda"
        android:ems="10"
        android:hint="@string/txtSenha"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#201E1E"
        android:textColorHint="#BDBFC1" >
    </EditText>
    
     <Button
        android:id="@+id/btConectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtSenha"
        android:layout_alignRight="@+id/txtSenha"
        android:layout_alignTop="@+id/txtSenha"
        android:layout_marginTop="60dp"
        android:background="@drawable/bt_main"
        android:textColor="#FEFEFE"
        android:padding="15dp"
        android:text="@string/txt_conectar" />

    <TextView
        android:id="@+id/textViewEsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icone_categoria"
        android:layout_alignRight="@+id/icone_categoria"
        android:layout_alignTop="@+id/btConectar"
        android:layout_marginTop="70dp"
        android:textColor="@drawable/txt_link_main"
        android:clickable="true"
        android:gravity="center"
        android:background="@drawable/txt_link_bg"
        android:padding="10dp"
        android:text="@string/txt_esqueci_senha" />
    
    <Button
        android:id="@+id/btCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bt_bottom"
        android:text="@string/txt_crie_conta"
        android:padding="20dp"
        android:gravity="left"
        android:textColor="#FEFEFE" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btConectar"
        android:layout_alignTop="@+id/btCriarConta"
        android:contentDescription="@string/iconNext"
        android:src="@drawable/icon_bt_avancar" />
    
</RelativeLayout>