<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E6E7E8"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".ChamarSenhaActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#0B89C4" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_topo" />

        <Button
            android:id="@+id/btn_atualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/icone_update" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/txtDescri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nome_estab" />

        <TextView
            android:id="@+id/txt_estabelecimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/lbl_sua_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sua_senha" />

        <TextView
            android:id="@+id/txt_sua_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_ultimas_chamadas"
        android:padding="10dp" />

    <ListView
        android:id="@+id/list_historico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/TextView05"
        android:padding="10dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/lbl_estima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_estimativa" />

        <TextView
            android:id="@+id/txt_estimativa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF" >

        <Button
            android:id="@+id/btSolicitarSenha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/bt_senha"
            android:padding="15dp"
            android:text="@string/txtSolicitarSenha"
            android:textColor="#FEFEFE" />

    </LinearLayout>

</LinearLayout>